# graphicsMatte

./: CMakeCache.txt  CMakeLists.txt  Makefile  README  README.md  cmake_install.cmake  matting  matting.cpp
include/: geodesics.h  kde.h
src/: figtree.cpp  geodesics.cpp  kde.cpp
