cmake_minimum_required(VERSION 2.8)
project( matting )
set(CMAKE_CXX_FLAGS -std=c++11)
add_library(kde src/kde.cpp include/kde.h)
add_library(geodesics src/geodesics.cpp include/geodesics.h)
add_library(figtree src/figtree.cpp include/figtree.h include/figtree_internal.h)
add_library(kcc src/KCenterClustering.cpp include/KCenterClustering.h)
find_package( OpenCV REQUIRED )
add_executable( matting matting.cpp )
include_directories(${CMAKE_SOURCE_DIR}/include ${CMAKE_SOURCE_DIR}/src)
target_link_libraries (figtree kcc)
target_link_libraries (kde figtree)
target_link_libraries( matting ${OpenCV_LIBS} kde geodesics)